--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,31 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<%if flash[:notice] %>
+				<div class="alert alert-success alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				<strong><%= flash[:notice]%></strong>
+				</div>
+			<% end %>
+			<%if flash[:alert] %>
+				<div class="alert alert-warning alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				<strong><%= flash[:alert]%></strong>
+				</div>
+			<% end %>
+			<%if flash[:error] %>
+				<div class="alert alert-danger alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				<strong><%= flash[:error]%></strong>
+				</div>
+			<% end %>
+		</div>
+	</div>
+	<%= yield %>
+</div>
 
 </body>
 </html>
