--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,10 +1,155 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$font-stack:    Helvetica, sans-serif;
-$primary-color: #333;
 
+// Variables
+$font-stack: "Source Sans Pro","Helvetica neue",helvetica,sans-serif;
+$black: #2C3E50 !important;
+$green: #19BC9C !important;
+$light-green: #9EE6DA !important ;
+$grey: #999B9B !important;
+$red: #de584d;
+$dark-red: #b64032;
+
+// Mixins
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
+
+// Styles
 body {
-  font: $font-stack;
-  color: $primary-color;
+  font-family: $font-stack;
+  color: $black;
+}
+
+// Buttons
+.btn{
+	border:none;
+}
+.btn-black{
+	background-color: $black;
+	color: #fff;
+}
+.btn-black:hover{
+	color: #fff;
+}
+.btn-red{
+	background-color: $red;
+	color: #fff;
+}
+.btn-red:hover{
+	color: #fff;
+}
+
+// Text
+.text-white{
+	color: #fff;
+}
+.text-black{
+	color: $black;
+}
+.text-grey{
+	color: $grey;
+}
+// Background
+.green-background{
+	background-color: $green;
+}
+
+// Menu
+.navbar-brand{
+	color:$green;
+	padding: 15px 0;
+}
+ul.navbar-nav li{
+	margin-right: 5px;
+}
+ul.navbar-nav li:last-child{
+	margin-right: 0;
+}
+.navbar-toggle{
+	background-color: $black;
+	color: #fff;
+	border-color:$black;
+	.icon-bar{
+		background-color: #fff !important;
+	}
+}
+
+// Separators
+.separation-1{
+	padding-top:35px;
+	padding-bottom:20px;
+}
+
+.separation-2{
+	padding-top:50px;
+	padding-bottom:20px;
+}
+
+
+// Sections
+.presentation{
+	@extend .separation-1;
+	h1{
+		text-align: center;
+		color:#fff;
+		margin-bottom:15px;
+		strong{
+			color:$black;
+		}
+	}
+}
+
+.info{
+	@extend .separation-2;
+	h2{
+		position: relative;
+		top: 20px;
+		margin-left: 15px;
+		display:inline-block;
+	}
+	form{
+		@extend .separation-1;
+	}
+	.input-group-addon{
+		width:66px !important;
+		color:#fff;
+		background-color:$red;
+		border-color:$red;
+	}
+	.form-control:focus {
+		border-color: $red;
+		outline: 0;
+		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba($red,.6);
+		box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba($red,.6);
+	}
+	.total{
+		font-size: 15px;
+		margin-bottom: 5px;
+		text-align: right;
+	}
+	.rates{
+		@extend .separation-1;
+		padding-left:0;
+		li{
+			list-style:none;
+			display:inline-block;
+
+			h3{
+				text-transform:uppercase;
+				color:#4fba6f;
+				margin-top: 0;
+				margin-bottom: 5px;
+			}
+			p{
+				font-size: 1.5em;
+			}
+		}
+
+	}
+
 }
