--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
 					<h1>some title, <strong>subtitle</strong></h1>
 					<div class="row">
 						<div class="col-xs-offset-2 col-xs-8">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quidem quam maiores cupiditate qui amet minus tempora voluptatum perspiciatis quae, tenetur, incidunt nisi dolorum autem exercitationem odit, sit quod magnam!</p>
+							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio unde soluta quae iste deserunt accusantium cumque dicta facere laudantium reiciendis temporibus architecto tempora, illo assumenda? Doloribus quis magni reiciendis magnam aliquam quibusdam, vel aliquid perspiciatis quo? Eveniet numquam eum hic, at, dolor quos sequi odio, enim quis iure accusamus commodi alias temporibus quidem impedit sint earum nihil deserunt vero? Necessitatibus.</p>
 						</div>
 					</div>
 				</section>
@@ -82,7 +82,7 @@
 				</form>
 			</section>
 		</div>
-		<div class="col-xs-12 col-md-4 col-md-offset-1">
+		<div class="col-xs-12 col-md-4 col-md-offset-2">
 			<section class="info">
 				<div class="text-center">
 					<%= image_tag "money.png" %>
@@ -104,3 +104,4 @@
 		</div>
 	</div>
 </div>
+
