--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Myapp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700italic,400italic,300italic,300' rel='stylesheet' type='text/css'>
-  <%= csrf_meta_tags %>
-   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<title>Mailcourier</title>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700italic,400italic,300italic,300' rel='stylesheet' type='text/css'>
+  	<%= csrf_meta_tags %>
+   	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
