--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
 			</div>
 			<div class="form-group">
 				<label for="location" class="text-uppercase">reception center <span title="prefered package reception center" class="glyphicon glyphicon-info-sign"></span></label>
-				<select  class="form-control input-lg" name="location">
+				<select  class="form-control input-lg" name="agency">
 					<option selected disabled value="">Select a Location</option>
 					<option value="">Location 1</option>
 					<option value="">Location 2</option>
@@ -156,7 +156,7 @@
 		<div class="col-xs-12 col-md-4 col-md-offset-2">
 			<section class="info">
 				<div class="text-center">
-					<%= image_tag "money.png" %>
+					<%= image_tag "money.png", title:'Keynote and PowerPoint icons by Magnus Emil Liisberg Helding is licensed under Free for commercial use'%>
 					<h2>Prices</h2>
 				</div>
 				<ul class="rates text-center">
