--- a/app/views/package/show.html.erb
+++ b/app/views/package/show.html.erb
@@ -34,7 +34,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<ul class="list-unstyled list-inline title-separator">
-				<li class="align-middle"><%= image_tag "close-box.png" , class: "img-responsive"%></li>
+				<li class="align-middle"><%= image_tag "close-box.png" , class: "img-responsive", title: 'Ballicons 2 Free by Pixel Buddha is licensed under CC BY 3.0'%></li>
 				<li class="align-middle"><h3 class="no-margin">Package Details</h3></li>
 			</ul>
 		</div>
