package migration changes

--- a/app/views/package/show.html.erb
+++ b/app/views/package/show.html.erb
@@ -40,7 +40,7 @@
 		</div>
 		<div class="col-xs-12">
 			<dl class="dl-horizontal">
-				<dt class="text-uppercase">id</dt>
+				<dt class="text-uppercase">Reference Number</dt>
 				<dd>15412344</dd>
 				<dt class="text-capitalize">description</dt>
 				<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem sequi, vel repellendus repudiandae dignissimos praesentium voluptatum reprehenderit et, ad adipisci sed ipsa reiciendis tempora illo nesciunt, neque expedita! Ducimus, unde.</dd>
@@ -61,7 +61,7 @@
 				<dd>10.10</dd>
 				<dt class="text-capitalize">agency</dt>
 				<dd>Lorem ipsum dolor</dd>
-				<dt class="text-capitalize">Send Cost</dt>
+				<dt class="text-capitalize">Shipping Cost</dt>
 				<dd>10.10</dd>
 				<dt class="text-capitalize">Date Added</dt>
 				<dd>10/10/2014</dd>
