--- a/app/views/package/tables/_operator.html.erb
+++ b/app/views/package/tables/_operator.html.erb
@@ -6,6 +6,7 @@
 			<th>Status</th>
 			<th>To</th>
 			<th>From</th>
+			<th>Mask As</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -15,6 +16,7 @@
 			<td>Pending</td>
 			<td>Username Receiver</td>
 			<td>Username Sender</td>
+			<td><button class="btn btn-xs btn-green">Delivered</button></td>
 		</tr>
 		<tr>
 			<td>1</td>
@@ -22,6 +24,7 @@
 			<td>Pending</td>
 			<td>Username Receiver</td>
 			<td>Username Sender</td>
+			<td><button class="btn btn-xs btn-black">Arrived</button></td>
 		</tr>
 	</tbody>
 </table>
