--- a/app/views/package/forms/_new.html.erb
+++ b/app/views/package/forms/_new.html.erb
@@ -1,49 +1,57 @@
-<form action="" role="form" method="post" class="form-horizontal" id="new-package">
-	<div class="form-group">
-		<label for="description" class="col-sm-2 control-label text-capitalize">description</label>
-		<div class="col-xs-12 col-md-6">
-		<input required type="text" class="form-control text-capitalize" name="description" placeholder="Package Description">
+<div class="row">
+	<div class="col-xs-12">
+		<ul class="list-unstyled list-inline title-separator">
+			<li class="align-middle"><%= image_tag "add.png" , class: "img-responsive img-sm", title: 'small-n-flat by Paomedi is licensed under CC BY 3.0'%></li>
+			<li class="align-middle"><h3 class="no-margin">New Package</h3></li>
+		</ul>
+	<form action="" role="form" method="post" class="form-horizontal" id="new-package">
+		<div class="form-group">
+			<label for="description" class="col-sm-2 control-label text-capitalize">description</label>
+			<div class="col-xs-12 col-md-6">
+			<input required type="text" class="form-control text-capitalize" name="description" placeholder="Package Description">
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="weight" class="col-sm-2 control-label text-capitalize">weight</label>
-		<div class="col-xs-12 col-md-6">
-		<input required type="text" class="form-control text-capitalize" name="weight" placeholder="Package weight">
+		<div class="form-group">
+			<label for="weight" class="col-sm-2 control-label text-capitalize">weight</label>
+			<div class="col-xs-12 col-md-6">
+			<input required type="text" class="form-control text-capitalize" name="weight" placeholder="Package weight">
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="height" class="col-sm-2 control-label text-capitalize">height</label>
-		<div class="col-xs-12 col-md-6">
-		<input required type="text" class="form-control text-capitalize" name="height" placeholder="Package height">
+		<div class="form-group">
+			<label for="height" class="col-sm-2 control-label text-capitalize">height</label>
+			<div class="col-xs-12 col-md-6">
+			<input required type="text" class="form-control text-capitalize" name="height" placeholder="Package height">
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="depth" class="col-sm-2 control-label text-capitalize">depth</label>
-		<div class="col-xs-12 col-md-6">
-		<input required type="text" class="form-control text-capitalize" name="depth" placeholder="Package depth">
+		<div class="form-group">
+			<label for="depth" class="col-sm-2 control-label text-capitalize">depth</label>
+			<div class="col-xs-12 col-md-6">
+			<input required type="text" class="form-control text-capitalize" name="depth" placeholder="Package depth">
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="value" class="col-sm-2 control-label text-capitalize">value</label>
-		<div class="col-xs-12 col-md-6">
-		<input required type="text" class="form-control text-capitalize" name="value" placeholder="Package value">
+		<div class="form-group">
+			<label for="value" class="col-sm-2 control-label text-capitalize">value</label>
+			<div class="col-xs-12 col-md-6">
+			<input required type="text" class="form-control text-capitalize" name="value" placeholder="Package value">
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="Destination" class="col-sm-2 control-label text-capitalize">Destination</label>
-		<div class="col-xs-12 col-md-6">
-		<select required class="form-control" name="agency">
-			<option selected disabled value="">Select an Agency</option>
-			<option value="">Location 1</option>
-			<option value="">Location 2</option>
-			<option value="">Location 3</option>
-		</select>
+		<div class="form-group">
+			<label for="Destination" class="col-sm-2 control-label text-capitalize">Destination</label>
+			<div class="col-xs-12 col-md-6">
+			<select required class="form-control" name="agency">
+				<option selected disabled value="">Select an Agency</option>
+				<option value="">Location 1</option>
+				<option value="">Location 2</option>
+				<option value="">Location 3</option>
+			</select>
+			</div>
 		</div>
-	</div>
-	<div class="form-group">
-		<label for="Receiver" class="col-sm-2 control-label text-capitalize">Receiver</label>
-		<div class="col-xs-12 col-md-6">
-		<input required type="text" class="form-control text-capitalize" name="receiver" placeholder="Receiver Username">
+		<div class="form-group">
+			<label for="Receiver" class="col-sm-2 control-label text-capitalize">Receiver</label>
+			<div class="col-xs-12 col-md-6">
+			<input required type="text" class="form-control text-capitalize" name="receiver" placeholder="Receiver Username">
+			</div>
 		</div>
+	</form>
 	</div>
-</form>
+</div>
