--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,49 @@
 </head>
 <body>
 
+<% if (request.path == "/") %>
+	<div class="navbar-full navbar-white">
+<%else%>
+	<div class="navbar-full navbar-green">
+<%end%>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<nav class="navbar" role="navigation">
+					    <!-- Brand and toggle get grouped for better mobile display -->
+					    <div class="navbar-header">
+					      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					      </button>
+					      <a class="navbar-brand" href="/"><strong>Mail</strong>courier</a>
+					    </div>
+
+					    <!-- Collect the nav links, forms, and other content for toggling -->
+					    <div class="collapse navbar-collapse" id="menu">
+					      <ul class="nav navbar-nav navbar-right">
+					      	<% if  user_signed_in? %>
+					      	<li>
+						      	<a id="usernameLabel" role="button" data-toggle="dropdown" data-target="#" href="" class="text-black"><%=current_user.username%> <span class="caret"></span></a>
+								<ul class="dropdown-menu" role="menu" aria-labelledby="usernameLabel">
+									<li>
+										<%= link_to('Logout', destroy_user_session_path, :method => :delete)%> 
+									</li>
+								</ul>
+							</li>
+					      	<%else%>
+						        <li><a href="/users/sign_in">LOGIN</a></li>
+						        <li><a  href="/users/sign_up">SIGN UP</a></li>
+					      	<%end%>
+					      </ul>
+					    </div><!-- /.navbar-collapse -->
+					</nav>
+				</div>
+			</div>
+		</div>
+	</div>
+
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
