--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-6 col-md-offset-3">	
 			<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form-mail"}) do |f| %>
-			  <%= devise_error_messages! %>
+			  <% devise_flash %>
 
 				<h1>Sign up</h1>
 				<div class="form-group">
