--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,11 @@
 					        <span class="icon-bar"></span>
 					        <span class="icon-bar"></span>
 					      </button>
+					      <% if  user_signed_in? %>
+					      <a class="navbar-brand" href="/packages"><strong>Mail</strong>courier</a>
+					      <%else%>
 					      <a class="navbar-brand" href="/"><strong>Mail</strong>courier</a>
+					      <%end%>
 					    </div>
 
 					    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -64,28 +68,11 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<%if flash[:notice] %>
-				<div class="alert alert-success alert-dismissable">
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				<strong><%= flash[:notice]%></strong>
-				</div>
-			<% end %>
-			<%if flash[:alert] %>
-				<div class="alert alert-warning alert-dismissable">
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				<strong><%= flash[:alert]%></strong>
-				</div>
-			<% end %>
-			<%if flash[:error] %>
-				<div class="alert alert-danger alert-dismissable">
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				<strong><%= flash[:error]%></strong>
-				</div>
-			<% end %>
+			<%= render :partial => "shared/messages" %>
 		</div>
 	</div>
-	
 </div>
+
 <%= yield %>
 </body>
 </html>
