--- a/app/views/package/index.html.erb
+++ b/app/views/package/index.html.erb
@@ -1,31 +1,6 @@
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12">
-			<ul class="list-unstyled list-inline title-separator">
-				<li class="align-middle"><%= image_tag "open-box.png" , class: "img-responsive img-sm", title: 'Ballicons (free) by Nick Frost is licensed under CC BY 3.0'%></li>
-				<li class="align-middle"><h3 class="no-margin">Packages</h3></li>
-			</ul>
-		</div>
-		<div class="col-xs-12 col-md-8">
-			<div class="table-responsive">
-				<%= render :partial => "package/tables/operator" %>
-			</div>
-			<div class="text-right">
-				<ul class="pagination pagination-sm">
-				  <li><a href="#">&laquo;</a></li>
-				  <li><a href="#">1</a></li>
-				  <li><a href="#">2</a></li>
-				  <li><a href="#">3</a></li>
-				  <li><a href="#">4</a></li>
-				  <li><a href="#">5</a></li>
-				  <li><a href="#">&raquo;</a></li>
-				</ul>	
-			</div>
-		</div>
-		<div class="col-md-offset-1 col-md-3 col-xs-12">
-			<%= render :partial => "package/forms/operator" %>
-	    	<p class="text-danger text-center">0 Packages found</p>
-		</div>
-	</div>
-	<%= render :partial => "package/forms/new" %>
-</div>
+<% if  current_user.role == 0 %>
+	<%= render :partial => "package/users/user" %>
+<%else%>
+	<%= render :partial => "package/users/operator" %>
+<%end%> 
+
