--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,23 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 col-md-4 col-md-offset-4">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "form-mail" }) do |f| %>
+			<% devise_flash %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+			<h1>Forgot your password?</h1>
+			<br>
+			<div class="form-group">
+				<%= f.label :email, html:{ class: "text-uppercase" } %>
+				<%= f.email_field :email, autofocus: true, class: "form-control input-lg" %>
+			</div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
+			<div class="form-group">
+				<%= f.submit "Send me reset password instructions" , class: "no-radius btn btn-green btn-block btn-lg text-uppercase"%>
+			</div>
+		<% end %>
 
-<%= render "devise/shared/links" %>
+		</div>
+	</div>
+</div>
+
