--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,46 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 col-md-6 col-md-offset-3">  
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+		<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, html: {class: "form-mail"}) do |f| %>
+		  <% devise_flash %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+			<h1>Edit <%= resource_name.to_s.humanize %></h1>
+			<div class="form-group">
+				<%= f.label :email, class: "text-uppercase" %>
+				<%= f.email_field :email, autofocus: true, class: "form-control input-lg" %>
+			</div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+			<% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+			<div class="form-group">
+				Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+			</div>
+			<% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+			<div class="form-group">
+				<%= f.label :password, class: "text-uppercase" %> <i>(leave blank if you don't want to change it)</i>
+				<%= f.password_field :password, autocomplete: "off", class: "form-control input-lg"%>
+			</div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+			<div class="form-group">
+				<%= f.label :password_confirmation , class: "text-uppercase"%>
+				<%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg" %>
+			</div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+			<div class="form-group">
+				<%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i>
+				<%= f.password_field :current_password, autocomplete: "off", class: "form-control input-lg" %>
+			</div>
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
+			<div class="form-group">
+				<%= f.submit "Update", class: "no-radius btn btn-green btn-block btn-lg text-uppercase" %>
+			</div>
+			<hr>
+		<% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+			<br>
+			<h3 class="text-black">Cancel my account</h3>
+			<p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete , class: "no-radius btn btn-black"%></p>
+		</div>
+	</div>
+</div>
