sender and receiver validations

--- a/app/views/package/new.html.erb
+++ b/app/views/package/new.html.erb
@@ -9,7 +9,7 @@
 				<div class="form-group">
 					<label for="description" class="col-sm-2 control-label text-capitalize">description</label>
 					<div class="col-xs-12 col-md-6">
-					 <%= f.text_field :description, class: 'form-control text-capitalize', placeholder: 'Package Description', required: true%>
+					 <%= f.text_field :description, class: 'form-control', placeholder: 'Package Description', required: true%>
 					</div>
 
 				</div>
