--- a/app/views/package/new.html.erb
+++ b/app/views/package/new.html.erb
@@ -5,60 +5,81 @@
 				<li class="align-middle"><%= image_tag "add.png" , class: "img-responsive img-sm", title: 'small-n-flat by Paomedi is licensed under CC BY 3.0'%></li>
 				<li class="align-middle"><h3 class="no-margin">New Package</h3></li>
 			</ul>
+		</div>
+		<div class="col-xs-12 col-md-8">
 			<%= form_for @package, url: {action: "create"}, html: {class: "form-horizontal"} do |f| %>
 				<div class="form-group">
 					<label for="description" class="col-sm-2 control-label text-capitalize">description</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					 <%= f.text_field :description, class: 'form-control', placeholder: 'Package Description', required: true%>
 					</div>
 
 				</div>
 				<div class="form-group">
 					<label for="weight" class="col-sm-2 control-label text-capitalize">weight</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					<%= f.text_field :weight, class: 'form-control text-capitalize', placeholder: 'weight in kilograms', required: true%>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="height" class="col-sm-2 control-label text-capitalize">height</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					<%= f.text_field :height, class: 'form-control text-capitalize', placeholder: 'height in centimeters', required: true%>
 					</div>
 				</div>
 				<div class="form-group">
+					<label for="width" class="col-sm-2 control-label text-capitalize">width</label>
+					<div class="col-xs-12 col-md-8">
+					<%= f.text_field :width, class: 'form-control text-capitalize', placeholder: 'width in centimeters', required: true%>
+					</div>
+				</div>
+				<div class="form-group">
 					<label for="depth" class="col-sm-2 control-label text-capitalize">depth</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					<%= f.text_field :depth, class: 'form-control text-capitalize', placeholder: 'depth in centimeters', required: true%>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="value" class="col-sm-2 control-label text-capitalize">value</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					<%= f.text_field :value, class: 'form-control text-capitalize', placeholder: 'value in Bsf', required: true%>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="Destination" class="col-sm-2 control-label text-capitalize">Destination</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					<%= select_tag(:agency_id, options_for_select(Agency.all.collect {|p| [ p.location, p.id ] }), {prompt: 'Select a Location' , class: "form-control",})%>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="Sender" class="col-sm-2 control-label text-capitalize">Sender</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					<%= text_field_tag :sender,'', class: 'form-control', placeholder: 'exampleUsername', required: true%>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="Receiver" class="col-sm-2 control-label text-capitalize">Receiver</label>
-					<div class="col-xs-12 col-md-6">
+					<div class="col-xs-12 col-md-8">
 					<%= text_field_tag :receiver, '',{class: 'form-control', placeholder: 'exampleUsername', required: true}%>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="Receiver" class="col-sm-2 control-label text-capitalize">shipping cost</label>
+					<div class="col-xs-12 col-md-8">
+						<div class="input-group">
+							<%= text_field_tag :shipping_cost, '',{class: 'form-control', placeholder: 'Press the button to calculate', required: true}%>
+					        <div class="input-group-btn">
+					            <button id="math" class="btn btn-green text-capitalize" type="button">calculate</button>
+					        </div>
+					    </div>
 					</div>
 				</div>
 
 				<div class="form-group text-right">
-					<br>
-					<%= f.submit "add package", class: "no-radius btn btn-green text-capitalize"%>
+					<div class="col-xs-12">
+						<br>
+						<%= f.submit "add package", class: "no-radius btn btn-green text-capitalize"%>	
+					</div>
 				</div>
 			<% end %>
 		</div>
