show current rates on front page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,11 +72,11 @@
 				<ul class="rates text-center">
 					<li class="pull-left">
 						<h3>Value Rate</h3>
-						<p>2 %</p>
+						<p><%=@costRate%></p>
 					</li>
 					<li class="pull-right">
-						<h3>Size Rate</h3>
-						<p>30</p>
+						<h3>Package Rate</h3>
+						<p><%=@packageRate%></p>
 					</li>
 					<div class="clearfix"></div>
 				</ul>
