--- a/app/views/package/new.html.erb
+++ b/app/views/package/new.html.erb
@@ -48,7 +48,7 @@
 				<div class="form-group">
 					<label for="Destination" class="col-sm-2 control-label text-capitalize">Destination</label>
 					<div class="col-xs-12 col-md-8">
-					<%= select_tag(:agency_id, options_for_select(Agency.all.collect {|p| [ p.location, p.id ] }), {prompt: 'Select a Location' , class: "form-control",})%>
+					<%= f.select(:agency_id, options_for_select(Agency.all.collect {|p| [ p.location, p.id ] }),{include_blank: "Select location"},{ required: true, class: "form-control"})%>
 					</div>
 				</div>
 				<div class="form-group">
@@ -67,7 +67,7 @@
 					<label for="Receiver" class="col-sm-2 control-label text-capitalize">shipping cost</label>
 					<div class="col-xs-12 col-md-8">
 						<div class="input-group">
-							<%= text_field_tag :shipping_cost, '',{class: 'form-control', placeholder: 'Press the button to calculate', required: true}%>
+							<%= f.text_field :shipping_cost, {class: 'form-control', placeholder: 'Press the button to calculate', required: true}%>
 					        <div class="input-group-btn">
 					            <button id="math" class="btn btn-green text-capitalize" type="button">calculate</button>
 					        </div>
