--- a/app/views/package/users/_operator.html.erb
+++ b/app/views/package/users/_operator.html.erb
@@ -40,15 +40,7 @@
 				</table>
 			</div>
 			<div class="text-right">
-				<ul class="pagination">
-				  <li><a href="#">&laquo;</a></li>
-				  <li><a href="#">1</a></li>
-				  <li><a href="#">2</a></li>
-				  <li><a href="#">3</a></li>
-				  <li><a href="#">4</a></li>
-				  <li><a href="#">5</a></li>
-				  <li><a href="#">&raquo;</a></li>
-				</ul>	
+				<%= paginate @packages %>	
 			</div>
 		</div>
 		<div class="col-md-offset-1 col-md-3 col-xs-12">
