--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,15 +34,17 @@
 					        <span class="icon-bar"></span>
 					        <span class="icon-bar"></span>
 					      </button>
-					      <a class="navbar-brand" href="/"><strong>Mail</strong>courier</a>
+					      <a class="navbar-brand" href="<%= root_path%>"><strong>Mail</strong>courier</a>
 					    </div>
 
 					    <!-- Collect the nav links, forms, and other content for toggling -->
 					    <div class="collapse navbar-collapse" id="menu">
 					      <ul class="nav navbar-nav navbar-right">
 					      	<% if  user_signed_in? %>
-					      		<%if current_user.role != 0%>
-					      			<li><a href="/package/new" class="text-capitalize">new package</a></li>
+					      		<%if !current_user.is_member?%>
+					      		<li>
+					      			<%= link_to('new package', new_package_path, class: 'text-capitalize')%> 
+					      		</li>
 					      		<%end%>
 					      	<li>
 					      		<a href="/package" class="text-capitalize">packages</a>
