--- a/app/views/package/users/_user.html.erb
+++ b/app/views/package/users/_user.html.erb
@@ -19,33 +19,20 @@
 						</tr>
 					</thead>
 					<tbody>
+						<% @packages.each_with_index do |package,i| %>
 						<tr>
-							<td>1</td>
-							<td>Headset</td>
-							<td>Sender</td>
-							<td>Pending</td>
-							<td><a href="">View Details</a></td>
+							<td><%= i+1 %></td>
+							<td><%= package.description %></td>
+							<td><%= current_user.package_role(package) %></td>
+							<td class="text-capitalize"><%= package.status_human%></td>
+							<td><a href="<%=package_path(package)%>">View Details</a></td>
 						</tr>
-						<tr>
-							<td>2</td>
-							<td>Headset</td>
-							<td>Sender</td>
-							<td>Pending</td>
-							<td><a href="">View Details</a></td>
-						</tr>
+						<% end %>
 					</tbody>
 				</table>
 			</div>
 			<div class="text-right">
-				<ul class="pagination">
-				  <li><a href="#">&laquo;</a></li>
-				  <li><a href="#">1</a></li>
-				  <li><a href="#">2</a></li>
-				  <li><a href="#">3</a></li>
-				  <li><a href="#">4</a></li>
-				  <li><a href="#">5</a></li>
-				  <li><a href="#">&raquo;</a></li>
-				</ul>	
+				<%= paginate @packages %>	
 			</div>
 		</div>
 		<div class="col-md-offset-1 col-md-3 col-xs-12">
