--- a/app/views/package/show.html.erb
+++ b/app/views/package/show.html.erb
@@ -9,34 +9,35 @@
 		<div class="col-xs-12">
 			<dl class="dl-horizontal">
 				<dt class="text-uppercase">Reference Number</dt>
-				<dd>15412344</dd>
+				<dd><%= @package.ref_number%></dd>
 				<dt class="text-capitalize">description</dt>
-				<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem sequi, vel repellendus repudiandae dignissimos praesentium voluptatum reprehenderit et, ad adipisci sed ipsa reiciendis tempora illo nesciunt, neque expedita! Ducimus, unde.</dd>
-				<dd>Lorem ipsum dolor sit amet.</dd>
+				<dd><%= @package.description%></dd>
 				<dt class="text-capitalize">From</dt>
-				<dd>Lorem ipsum</dd>
+				<dd><%= @package.sender.username%></dd>
 				<dt class="text-capitalize">To</dt>
-				<dd>Lorem ipsum</dd>
+				<dd><%= @package.receiver.username%></dd>
 				<dt class="text-capitalize">status</dt>
-				<dd>Lorem ipsum dolor sit amet.</dd>
+				<dd class="text-capitalize"><%= @package.status_human%></dd>
 				<dt class="text-capitalize">weight</dt>
-				<dd>10.10</dd>
+				<dd><%= @package.weight%> kg</dd>
 				<dt class="text-capitalize">height</dt>
-				<dd>10.10</dd>
+				<dd><%= @package.height%> cm</dd>
+				<dt class="text-capitalize">width</dt>
+				<dd><%= @package.width%> cm</dd>
 				<dt class="text-capitalize">depth</dt>
-				<dd>10.10</dd>
+				<dd><%= @package.depth%> cm</dd>
 				<dt class="text-capitalize">value</dt>
-				<dd>10.10</dd>
+				<dd><%= @package.value%> Bsf</dd>
 				<dt class="text-capitalize">agency</dt>
-				<dd>Lorem ipsum dolor</dd>
+				<dd><%= @package.agency.location%></dd>
 				<dt class="text-capitalize">Shipping Cost</dt>
-				<dd>10.10</dd>
+				<dd><%= @package.shipping_cost%> Bsf</dd>
 				<dt class="text-capitalize">Date Added</dt>
-				<dd>10/10/2014</dd>
+				<dd><%= @package.date_added%></dd>
 				<dt class="text-capitalize">Date Arrived</dt>
-				<dd>10/10/2014</dd>
+				<dd><%= @package.date_arrived%></dd>
 				<dt class="text-capitalize">Date Delivered</dt>
-				<dd>10/10/2014</dd>
+				<dd><%= @package.date_delivered%></dd>
 			</dl>
 		</div>
 	</div>
