--- a/app/views/package/users/_user.html.erb
+++ b/app/views/package/users/_user.html.erb
@@ -25,7 +25,7 @@
 							<td><%= package.description %></td>
 							<td><%= current_user.package_role(package) %></td>
 							<td class="text-capitalize"><%= package.status_human%></td>
-							<td><a href="<%=package_path(package)%>">View Details</a></td>
+							<td><%=link_to("View Details", package_path(package))%></td>
 						</tr>
 						<% end %>
 					</tbody>
