--- a/app/views/package/users/_operator.html.erb
+++ b/app/views/package/users/_operator.html.erb
@@ -17,12 +17,13 @@
 							<th>To</th>
 							<th>From</th>
 							<th>Mask As</th>
+							<th>Details</th>
 						</tr>
 					</thead>
 					<tbody>
 						<% @packages.each_with_index do |package,i| %>
 						<tr>
-							<td><%= i+1 %></td>
+							<td><%= package.ref_number %></td>
 							<td><%= package.description %></td>
 							<td class="text-capitalize"><%= package.status_human %></td>
 							<td><%= package.receiver.username %></td>
@@ -34,6 +35,7 @@
 								<%=link_to("Delivered", package_path(package, :status => 2), :method => :put, data: {confirm: "Are you sure you want to mark this package as Delivered?"}, class: 'btn btn-block btn-xs btn-green')%>
 								<%end%>
 							</td>
+							<td><%=link_to("View Details", package_path(package))%></td>
 						</tr>
 						<% end %>
 					</tbody>
@@ -44,9 +46,9 @@
 			</div>
 		</div>
 		<div class="col-md-offset-1 col-md-3 col-xs-12">
-			<form action="" role="form" method="post">
+			<%= form_tag(package_index_path, :method => "get", role: "form", id: "search-form") do %>
 				<div class="input-group form-group">
-			        <input type="text" class="form-control" placeholder="Search Package" name="search-term" id="search-term">
+			        <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search Packages", id: "search-form" %>
 			        <div class="input-group-btn">
 			            <button class="btn btn-green" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 			        </div>
@@ -54,14 +56,20 @@
 			    <span class="text-grey">Search by...</span>
 				<div class="radio">
 					<label class="radio-inline">
-						<input checked type="radio" name="search-by" id="search-by1" value="user"> User
+						<input checked type="radio" name="search_by" id="search-by1" value="user"> User
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="search-by" id="search-by2" value="package"> Package
+						<input type="radio" name="search_by" id="search-by2" value="package"> Package
 					</label>
 				</div>
-			</form>
-	    	<p class="text-danger text-center">0 Packages found</p>
+			<% end %>
+	    	<%if !@count.blank?%>
+	    		<%if @count == 0%>
+	    			<p class="text-danger text-center"><%=@count%> Packages found</p>
+	    		<%else%>
+	    			<p class="text-success text-center"><%=@count%> Packages found</p>
+	    		<%end%>
+	    	<%end%>
 		</div>
 		<p><%= %></p>
 	</div>
