--- a/app/views/package/users/_user.html.erb
+++ b/app/views/package/users/_user.html.erb
@@ -12,6 +12,7 @@
 					<thead>
 						<tr>
 							<th>#</th>
+							<th>Ref. Number</th>
 							<th>Description</th>
 							<th>Role</th>
 							<th>Status</th>
@@ -22,6 +23,7 @@
 						<% @packages.each_with_index do |package,i| %>
 						<tr>
 							<td><%= i+1 %></td>
+							<td><%= package.ref_number %></td>
 							<td><%= package.description %></td>
 							<td><%= current_user.package_role(package) %></td>
 							<td class="text-capitalize"><%= package.status_human%></td>
@@ -36,15 +38,21 @@
 			</div>
 		</div>
 		<div class="col-md-offset-1 col-md-3 col-xs-12">
-			<form action="" role="form" method="post">
+			<%= form_tag(package_index_path, :method => "get", role: "form", id: "search-form") do %>
 				<div class="input-group form-group">
-			        <input type="text" class="form-control" placeholder="Search Package" name="search-term" id="search-term">
+					<%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search Packages by Ref. number", id: "search-form" %>
 			        <div class="input-group-btn">
 			            <button class="btn btn-green" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 			        </div>
 			    </div>
-			</form>
-	    	<p class="text-danger text-center">0 Packages found</p>
+			<% end %>
+	    	<%if !@count.blank?%>
+	    		<%if @count == 0%>
+	    			<p class="text-danger text-center"><%=@count%> Packages found</p>
+	    		<%else%>
+	    			<p class="text-success text-center"><%=@count%> Packages found</p>
+	    		<%end%>
+	    	<%end%>
 		</div>
 	</div>
 </div>
