search by text fix

--- a/app/views/package/users/_operator.html.erb
+++ b/app/views/package/users/_operator.html.erb
@@ -59,7 +59,7 @@
 						<input checked type="radio" name="search_by" id="search-by1" value="user"> User
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="search_by" id="search-by2" value="package"> Package
+						<input type="radio" name="search_by" id="search-by2" value="package"> Ref. Number
 					</label>
 				</div>
 			<% end %>
