fix text home view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,31 +26,31 @@
 					<div class="form-group">
 						<div class="input-group">
 						  <div class="input-group-addon text-capitalize">Height</div>
-						  <input id="height" class="form-control text-capitalize" type="text" placeholder="Enter Height in centimeters">
+						  <input id="height" class="form-control" type="text" placeholder="centimeters">
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="input-group">
 						  <div class="input-group-addon text-capitalize">width</div>
-						  <input id="width" class="form-control text-capitalize" type="text" placeholder="Enter wuith in centimeters">
+						  <input id="width" class="form-control" type="text" placeholder="centimeters">
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="input-group">
 						  <div class="input-group-addon text-capitalize">Depth</div>
-						  <input id="depth" class="form-control" type="text" placeholder="Enter Depth centimeters">
+						  <input id="depth" class="form-control" type="text" placeholder="centimeters">
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="input-group">
 						  <div class="input-group-addon text-capitalize">Weight</div>
-						  <input id="weight" class="form-control text-capitalize" type="text" placeholder="Enter Weight in kilograms">
+						  <input id="weight" class="form-control" type="text" placeholder="kilograms">
 						</div>
 					</div>
 					<div class="form-group">
 						<div class="input-group">
 						  <div class="input-group-addon text-capitalize">Value</div>
-						  <input id="value" class="form-control text-capitalize" type="text" placeholder="Enter Value in Bsf">
+						  <input id="value" class="form-control" type="text" placeholder="Bsf">
 						</div>
 					</div>
 					<div class="form-group total">
