--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
 			<section class="info">
 				<div class="text-center">
 					<%= image_tag "calculator.png" %>
-					<h2>Calculator</h2>
+					<h2><%= t('calculator') %></h2>
 				</div>
 				<div class="separation-1">
 					<div class="form-group">
