create and activate rates

--- a/app/views/rate/new.html.erb
+++ b/app/views/rate/new.html.erb
@@ -18,7 +18,7 @@
 				</div>
 
 			  	<div class="form-group">
-			  		<%= f.submit "Add rates", class: "no-radius btn btn-green btn-block btn-lg text-uppercase"%>
+			  		<%= f.submit "Add rates", class: "no-radius btn btn-green btn-block btn-lg text-uppercase", data: {confirm: "Are you sure you want create this rate configuration?"}%>
 			  	</div>
 			<% end %>
 		</div>
