--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -85,6 +85,11 @@ body {
 	background-color: $green;
 }
 
+// Label
+.bg-green{
+	background-color: #5cb85c;
+	color:#fff;
+}
 // Helpers
 .no-radius{
 	@include border-radius(0);
