--- a/app/views/rate/index.html.erb
+++ b/app/views/rate/index.html.erb
@@ -29,7 +29,7 @@
 							<td><%= rate.updated_at %></td>
 							<td class="text-center text-capitalize">
 								<% if rate.is_active?%>
-								<span class="label label-success">Active</span>
+								<div class="bg-green">Active</div>
 								<%else%>
 								<%=link_to("Activate", rate_path(rate, :status => 1), :method => :put, data: {confirm: "Are you sure you want to activate this rates?"}, class: 'btn btn-block btn-xs btn-black')%>
 								<%end%>
